# TIMEngine2

./: .gitignore  README.md
Data/: .gitignore  testScene.xml  testScene_specprobe.xml  testscene2.xml  water.xml
Data/meshBank/: arbreAssets.xml  fencesAssets.xml  flower.xml  kapla.xml  palm.xml  rockPalmAssets.xml  sacredGroveAsset.xml  sunStone.xml
Data/meshBank/island/: island.xml
Data/scene/: configScene.txt  flyingIsland.xml  flyingIsland_specprobe.xml  forest1.xml  forest2.xml  forest3.xml  forest3_parameters.xml  forest4.xml  forest4_parameters.xml  gameAssets.xml  ocean.xml  ocean_parameters.xml  ocean_specprobe.xml  sacredGrove.xml  sacredGrove_blue.xml  sacredGrove_final.xml  sacredGrove_red.xml  sacredGrove_white.xml  sacredGrove_white_parameters.xml  sceneInside.xml  start.xml  start_specprobe.xml
Data/scene/sacredGroveHQ/: sacredGrove_final.xml
Data/scene/sacredGroveHQLow/: sacredGrove_blue.xml  sacredGrove_final.xml  sacredGrove_red.xml
Data/shader/: gbufferPass.frag  gbufferPass.vert  tiledLightShader.cs
Source/: CMakeLists.txt  MainHelper.cpp  MainHelper.h
Source/OpenVR/: CMakeLists.txt  HmdSceneView.cpp  HmdSceneView.h  OnHmdRenderer.cpp  OnHmdRenderer.h  OpenVR_Device.cpp  OpenVR_Device.h  SoftVR_Device.cpp  SoftVR_Device.h  VRDebugCamera.h  VR_Device.cpp  VR_Device.h  VR_DeviceInterface.cpp  VR_DeviceInterface.h
Source/PortalGame/: CMakeLists.txt  Controller.h  FlyingIslandLevel.cpp  ForestLevel.cpp  ForestLevel.h  Level1.cpp  LevelSystem.cpp  LevelSystem.h  MultiSceneManager.cpp  MultiSceneManager.h  MultipleSceneHelper.cpp  MultipleSceneHelper.h  OceanLevel.cpp  OceanLevel.h  PortalGame.cpp  PortalGame.h  SacredGroveLevel.cpp  StartLevel.cpp  StartLevel.h  main.cpp
Source/TIMEditor/: AssetViewWidget.cpp  CMakeLists.txt  EditorWindow.cpp  EditorWindow.h  EditorWindow.ui  GLViewContainer.cpp  GLViewContainer.h  MainRenderer.cpp  MainRenderer.h  MeshEditor.ui  MeshEditorWidget.cpp  QtTextureLoader.cpp  RendererThread.cpp  RendererThread.h  RendererWindow.cpp  RendererWindow.h  ResourceViewWidget.cpp  SceneEditor.ui  SceneEditorWidget.cpp  SceneEditorWidget.h  SelectSkyboxDialog.ui  mainEditor.cpp
Source/TIMEngine2/: CMakeLists.txt
Source/TIMEngine2/TIM_SDL/: SDLTextureLoader.cpp
Source/TIMEngine2/bullet/: BulletEngine.h  GeometryShape.cpp  HeightFieldShape.h
Source/TIMEngine2/bullet/old/: BulletTerrainObject.h
Source/TIMEngine2/core/: Cache.h  Common.cpp  Common.h  Exception.h  Logger.h  Matrix.h  MemoryLogger.cpp  MemoryLogger.h  MemoryLoggerOff.h  MemoryLoggerOn.h  NonCopyable.h  Option.h  Rand.cpp  Rand.h  RangeAllocator.h  SpinLock.h  StringUtils.h  ThreadPool.h  ThreadPoolExt.h  Vector.h  core.h  type.h
Source/TIMEngine2/core/thread_pool/: thread_pool.h
Source/TIMEngine2/interface/: FullPipeline.cpp  FullPipeline.h  Geometry.h  GeometryAssetLoader.h  MeshInstance.h  ParticleMesh.cpp  Pipeline.cpp  Pipeline.h  ShaderPool.h  Texture.h  XmlMeshAssetLoader.cpp  XmlMeshAssetLoader.h  XmlSceneLoader.cpp  XmlSceneLoader.h
Source/TIMEngine2/interface/pipeline/: DeferredRendererNode.cpp  DeferredRendererNode.h  DirLightCullingNode.h  DirLightShadowNode.cpp  DirLightShadowNode.h  FrameBufferRenderer.cpp  FrameBufferRenderer.h  pipeline.h
Source/TIMEngine2/renderer/: AbstractRenderer.h  BufferPool.h  DeviceFunctionnality.h  DirectionalLightRenderer.cpp  DirectionalLightRenderer.h  DrawState.h  FrameBuffer.h  GLState.cpp  GLState.h  GpuBuffer.h  IndirectLightRenderer.cpp  IndirectLightRenderer.h  MeshBuffers.h  MeshRenderer.cpp  MeshRenderer.h  PooledBuffer.h  PostReflexionRenderer.h  ShaderCompiler.cpp  ShaderCompiler.h  Texture.cpp  Texture.h  VAO.h  renderer.cpp
Source/TIMEngine2/resource/: Asset.h  AssetManager.h  MeshLoader.cpp  MeshLoader.h
Source/TIMEngine2/scene/: BasicScene.h  SceneContainer.h  Transformable.h
Source/Tests/: CMakeLists.txt  main.cpp
